resolved design issue for paging that was behind the cards

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -33,9 +33,6 @@ body {
 }
 
 .pagination {
-  position: fixed; /* or absolute */
-  right: 50%;
-  left: 50%;
   cursor: default;
   height: 30px;
   a, span, em {
